[tool.poetry]
name = "jance"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.26.1"
pytrec-eval = "^0.5"
faiss-cpu = "^1.7.3"
wget = "^3.2"
datasets = "^2.9.0"
ir-datasets = "^0.5.4"
torch = "^1.13.1"
scikit-learn = "^1.2.1"
tensorboardX = "^2.6"
sentencepiece = "^0.1.97"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 70

[tool.isort]
profile = "black"
line_length = 70
multi_line_output = 3
include_trailing_comma = true
